--- a/wp-content/themes/intrepid/css/templates/about.scss
+++ b/wp-content/themes/intrepid/css/templates/about.scss
@@ -238,6 +238,10 @@
     margin-bottom: 25px;
     position: relative;
 
+    @media #{$phone}{
+        display: block;
+    }
+
     &:before {
         content: "";
         position: absolute;
