--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -22,6 +22,10 @@
         background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 39%, rgba(7, 11, 22, 0.83) 100%); /* Chrome10-25,Safari5.1-6 */
         background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 39%, rgba(7, 11, 22, 0.83) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80ffffff', endColorstr='#d4070b16', GradientType=0); /* IE6-9 */
+
+        @media #{$phone} {
+            background: rgba(0, 0, 0, 0.25);
+        }
     }
 
     .hero__content {
@@ -29,6 +33,7 @@
         z-index: 1;
         padding: 12px 20px;
         max-width: 710px;
+
         @media #{$phone} {
             padding: 12px 10px;
         }
