--- a/wp-content/themes/intrepid/css/partials/forms.scss
+++ b/wp-content/themes/intrepid/css/partials/forms.scss
@@ -17,194 +17,241 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
-  color: $dark-gray;
-  border: 1px solid #979797;
-  border-radius: 0;
-  padding: 11px 12px;
-  box-shadow: none;
-  background: $white;
-  font-family: $primary-family;
-  @include fsz(12px);
-  font-weight: 600;
-  width: 100%;
-  &:focus{
-    border-color:$dark-gray;
-    outline: none;
     color: $dark-gray;
-  }
-  &::-moz-placeholder {
-    color: $gray;
-    opacity: 1;
-    font-weight: 400;
-  }
-  &:-ms-input-placeholder {
-    color: $gray;
-    opacity: 1;
-    font-weight: 400;
-  }
-  &::-webkit-input-placeholder {
-    color: $gray;
-    opacity: 1;
-    font-weight: 400;
-  }
+    border: 1px solid #979797;
+    border-radius: 0;
+    padding: 11px 12px;
+    box-shadow: none;
+    background: $white;
+    font-family: $primary-family;
+    @include fsz(12px);
+    font-weight: 600;
+    width: 100%;
+
+    &:focus {
+        border-color: $dark-gray;
+        outline: none;
+        color: $dark-gray;
+    }
+
+    &::-moz-placeholder {
+        color: $gray;
+        opacity: 1;
+        font-weight: 400;
+    }
+
+    &:-ms-input-placeholder {
+        color: $gray;
+        opacity: 1;
+        font-weight: 400;
+    }
+
+    &::-webkit-input-placeholder {
+        color: $gray;
+        opacity: 1;
+        font-weight: 400;
+    }
 }
 
 input[type="text"],
 input[type="email"],
-textarea{
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
+textarea {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 .ginput_container_select,
 .form__field-select,
-.form__field-upload{
-  position: relative;
-  background: #DBDBDB;
-  &:after {
-      content: "";
-      display: block;
-      width: 8px;
-      height: 10px;
-      background: url(images/caret-left.svg) no-repeat 0 0;
-      position: absolute;
-      top: 14px;
-      right: 16px;
-      background-size: contain;
-      transform: rotate(-90deg);
-  }
+.form__field-upload {
+    position: relative;
+    background: #DBDBDB;
+
+    &:after {
+        content: "";
+        display: block;
+        width: 8px;
+        height: 10px;
+        background: url(images/caret-left.svg) no-repeat 0 0;
+        position: absolute;
+        top: 14px;
+        right: 16px;
+        background-size: contain;
+        transform: rotate(-90deg);
+        z-index: 10;
+        pointer-events: none;
+    }
 }
+
 .gfield_select,
-.custom-select{
-  border:1px solid $dusty-gray;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  width: 100%;
-  height: 39px;
-  padding: 11px 44px 11px 13px;
-  border-radius: 0;
-  @include fsz(12px);
-  font-weight: 600;
-  text-transform: uppercase;
-  position: relative;
-  z-index: 2;
-  background: transparent;
-  font-family: $primary-family;
-  &::-ms-expand {
-      display: none;
-  }
+.custom-select {
+    border: 1px solid $dusty-gray;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 39px;
+    padding: 11px 44px 11px 13px;
+    border-radius: 0;
+    @include fsz(12px);
+    font-weight: 600;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 2;
+    background: #fff;
+    font-family: $primary-family;
+    cursor: pointer;
+
+    &::-ms-expand {
+        display: none;
+    }
 }
-.custom-upload{
-  border:1px solid $dusty-gray;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  width: 100%;
-  height: 39px;
-  padding: 11px 44px 11px 13px;
-  border-radius: 0;
-  @include fsz(12px);
-  font-weight: 600;
-  text-transform: uppercase;
-  position: relative;
-  z-index: 2;
-  background: transparent;
-  font-family: $primary-family;
+
+.custom-upload {
+    border: 1px solid $dusty-gray;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 39px;
+    padding: 11px 44px 11px 13px;
+    border-radius: 0;
+    @include fsz(12px);
+    font-weight: 600;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 2;
+    background: transparent;
+    font-family: $primary-family;
 }
+
 textarea {
-  width: 100%;
-  height: 190px;
+    width: 100%;
+    height: 100px;
 }
+
+body main .gform_wrapper {
+    margin: 0;
+
+    .gfield {
+        margin-bottom: 10px;
+    }
+
+    ul li.gfield {
+        margin-top: 0;
+    }
+
+    .top_label div.ginput_container {
+        margin-top: 0;
+    }
+
+    li.hidden_label input {
+         margin-top: 0;
+    }
+}
+
 .ginput_container input.medium {
-  height: 39px;
+    height: 39px;
 }
+
 .ginput_container input.medium, .ginput_container textarea.textarea {
-  background: #F8F8F8;
-  border-radius: 0;
-  outline: none;
-  border: 1px solid #979797;
-  width: 100% !important;
-  box-shadow: none;
-  color: $dark-gray;
-  padding: 11px 13px;
-  font-family: $primary-family;
-  @include fsz(11px);
-  &::-moz-placeholder {
-      color: $gray;
-      opacity: 1;
-  }
-  &:-ms-input-placeholder {
-      color: $gray;
-      opacity: 1;
-  }
-  &::-webkit-input-placeholder {
-      color: $gray;
-      opacity: 1;
-  }
+    //background: #F8F8F8;
+    border-radius: 0;
+    outline: none;
+    border: 1px solid #979797;
+    width: 100% !important;
+    box-shadow: none;
+    color: $dark-gray;
+    padding: 11px 13px;
+    font-family: $primary-family;
+    @include fsz(11px);
+
+    &::-moz-placeholder {
+        color: $gray;
+        opacity: 1;
+    }
+
+    &:-ms-input-placeholder {
+        color: $gray;
+        opacity: 1;
+    }
+
+    &::-webkit-input-placeholder {
+        color: $gray;
+        opacity: 1;
+    }
 }
+
 .gfield_label {
-  display: none;
+    display: none;
 }
+
 .gfield {
-  margin-bottom: 7px;
+    margin-bottom: 7px;
 }
+
 .validation_error {
-  display: none;
+    display: none;
 }
+
 .gfield_required {
-  margin-left: 5px;
+    margin-left: 5px;
 }
+
 .validation_message {
-  color: #ff2d2d;
-  @include fsz(11px);
-  padding: 3px 0;
-  font-weight: 400;
+    color: #ff2d2d;
+    @include fsz(11px);
+    padding: 3px 0;
+    font-weight: 400;
 }
+
 .gform_footer {
-  position: relative;
-  text-align: right;
+    position: relative;
+    //text-align: right;
 }
+
 .button.gform_button {
-  background-color: $dark-gray;
-  color: $white;
-  transition: .3s ease;
-  text-align: left;
-  padding: 11px 45px;
-  font-family: $primary-family;
+    background-color: $dark-gray;
+    color: $white;
+    transition: .3s ease;
+    text-align: left;
+    padding: 11px 45px;
+    font-family: $primary-family;
 }
+
 img.gform_ajax_spinner {
-  position: absolute;
-  top: 20px;
-  right: -20px;
+    position: absolute;
+    top: 20px;
+    right: -20px;
 }
+
 .gform_confirmation_message {
-  color: green;
-  @include fsz(20px);
+    color: green;
+    @include fsz(20px);
 }
+
 .gform_validation_container,
 .gform_wrapper .gform_validation_container,
 body .gform_wrapper .gform_body ul.gform_fields li.gfield.gform_validation_container,
 body .gform_wrapper li.gform_validation_container,
 body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
-  display: none!important;
-  position: absolute!important;
-  left: -9000px;
+    display: none !important;
+    position: absolute !important;
+    left: -9000px;
 }
 
-.required-symbol{
-  position: absolute;
-  top:0;
-  right: 0;
-  @include fsz(9px);
-  letter-spacing: 2.1px;
-  text-transform: uppercase;
-  @media #{$phone} {
-    position: static;
-    margin-bottom: 15px;
-    display: block;
-    text-align: left;
-  }
+.required-symbol {
+    position: absolute;
+    top: 0;
+    right: 0;
+    @include fsz(9px);
+    letter-spacing: 2.1px;
+    text-transform: uppercase;
+    @media #{$phone} {
+        position: static;
+        margin-bottom: 15px;
+        display: block;
+        text-align: left;
+    }
 }
 
