--- a/wp-content/themes/intrepid/css/templates/build-boat.scss
+++ b/wp-content/themes/intrepid/css/templates/build-boat.scss
@@ -420,9 +420,20 @@
     }
 }
 
+.motor__description {
+
+    .motor-option__list-item & {
+        display: none;
+    }
+}
 
 .motor-color{
     padding-top: 25px;
+
+    .motor-option__list-item & {
+        display: none;
+    }
+
     .motor-color__item{
         cursor: pointer;
         margin-bottom: 15px;
@@ -624,14 +635,30 @@
     width: 100%;
     padding-top: 35px;
     display: none;
+
     @media #{$phone} {
         display: none;
         padding: 35px 10px 0;
     }
-    h2{
-        text-transform: uppercase;
+
+    h1, h2, h3, h5, h6{
         margin-bottom: 5px;
+    }
+
+    h1, h2 {
+        @include fsz(15px);
+    }
+
+    h3 {
         @include fsz(13px);
+    }
+
+    h4, h5, h6 {
+        @include fsz(10px);
+    }
+
+    p {
+        margin-bottom: 5px;
     }
 }
 
