--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -3,11 +3,14 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    padding: 365px 0 150px;
-    min-height: 680px;
+    display: flex;
+    align-items: center;
+    padding: 65px 0 50px;
+    max-height: calc(100vh - 85px);
+    height: calc(56.25vw);
+
     @media #{$phone} {
-        padding: 92px 0 70px;
-        min-height: 520px;
+        //min-height: 520px;
     }
 
     &:after {
@@ -22,9 +25,34 @@
         background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 39%, rgba(7, 11, 22, 0.83) 100%); /* Chrome10-25,Safari5.1-6 */
         background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 39%, rgba(7, 11, 22, 0.83) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80ffffff', endColorstr='#d4070b16', GradientType=0); /* IE6-9 */
+        z-index: 2;
 
         @media #{$phone} {
             background: rgba(0, 0, 0, 0.25);
+        }
+    }
+
+    .heroVideo__container {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        z-index: 1;
+    }
+
+    #heroVideo iframe {
+        width: 100vw;
+        height: 56.25vw;
+    }
+
+    .container {
+        margin-top: calc(253/766 * 56.25vw);
+        z-index: 3;
+
+        @media #{$phone} {
+            margin-top: 0;
         }
     }
 
@@ -590,10 +618,11 @@
         height: 72px;
         background: url(images/360-icon.svg) no-repeat center center;
         position: absolute;
-        right: 211px;
+        right: 8%;
         bottom: 100px;
         z-index: 2;
         text-indent: -999em;
+
         @media #{$desktop} {
             right: 50px;
             bottom: 50px;
