--- a/wp-content/themes/intrepid/css/partials/forms.scss
+++ b/wp-content/themes/intrepid/css/partials/forms.scss
@@ -130,6 +130,10 @@ textarea {
     height: 100px;
 }
 
+body main .toggle-content__item .gform_wrapper {
+    margin-bottom: 30px;
+}
+
 body main .gform_wrapper {
     margin: 0;
 
