--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+    background-color: #000;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -293,6 +294,9 @@
         height: 100%;
         display: flex;
         align-items: center;
+        margin-top: 0;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 
     .hero__content {
