--- a/wp-content/themes/intrepid/css/templates/model.scss
+++ b/wp-content/themes/intrepid/css/templates/model.scss
@@ -44,6 +44,8 @@
     a {
         color: $bright-gray;
         letter-spacing: 0.74px;
+        transition: none;
+
         @media #{$phone} {
             color: $white;
         }
