--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -694,15 +694,24 @@
         display: block;
         position: absolute;
         right: 5%;
-        top: 20px;
+        top: 40px;
+        //left: 50%;
+        //bottom: 20%;
+        //transform: translate3d(-50%, 0, 0);
+        transform: none;
         z-index: 10;
         background-color: #f4f4f4;
         width: 40px;
         height: 40px;
-        transform: none;
+
+        &:before,
+        &:after {
+            background-size: 27px auto;
+            transform: rotate(45deg);
+        }
 
         &:before {
-            transform: rotate(45deg);
+
         }
     }
 }
