--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -675,7 +675,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 0 30px;
     background-color: rgba(0, 0, 0, 0.8);
     opacity: 0;
     pointer-events: none;
@@ -690,11 +689,16 @@
         opacity: 1;
     }
 
+    .spinner__toggle-container {
+        display: none;
+        position: absolute;
+        top: calc((100vh - (580/1440 * 100vh))/2);
+        right: 5%;
+        z-index: 10;
+    }
+
     .spinner__toggle {
         display: block;
-        position: absolute;
-        right: 5%;
-        top: 40px;
         //left: 50%;
         //bottom: 20%;
         //transform: translate3d(-50%, 0, 0);
@@ -713,13 +717,24 @@
         &:before {
 
         }
+
+        &.spinner__toggle--bg {
+            right: 0;
+            top: 0;
+            transform: none;
+            width: 100%;
+            height: 100%;
+            background: none;
+            outline: none;
+            border: 0;
+            max-width: none;
+            z-index: 1;
+        }
     }
 }
 
 .spinner__inner {
     position: relative;
-
-
 }
 
 #spinner-view {
@@ -729,7 +744,7 @@
     height: 100%;
     width: 90%;
     transform: translate3d(-50%, -50%, 0);
-    z-index: 1;
+    z-index: 5;
 
     @media (max-width: 620px) {
         //top: 0;
