refactor motor and hover state of BAB

--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -45,7 +45,8 @@
         &:active,
         &:focus {
             background-position: -270px;
-            background-color: #6d0707;
+            color: #6d0707;
+            background-color: #fff;
         }
 
         svg {
