--- a/wp-content/themes/intrepid/css/templates/model.scss
+++ b/wp-content/themes/intrepid/css/templates/model.scss
@@ -147,9 +147,14 @@
         display: block;
         width: 100%;
         height: auto;
+        transition: 0.25s;
 
         .compare-mode--active & {
             opacity: 0.7;
+        }
+
+        .selected & {
+            opacity: 1;
         }
     }
 }
@@ -178,6 +183,7 @@
     &:before,
     &:after {
         content: '';
+        display: block;
         position: absolute;
         width: 100px;
         height: 100px;
@@ -207,6 +213,11 @@
         background-position: center;
         background-color: #687683;
         border-radius: 50%;
+
+        .selected & {
+            transform: translate(-50%, -50%) rotate(0) scale(0.98);
+            transition: 0.25s;
+        }
     }
 
     &:hover {
@@ -720,7 +731,7 @@
             background-color: transparent;
 
             &:hover {
-                background-color: #8a0808;
+                background-color: #ffffff;
             }
         }
     }
