--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -15,17 +15,14 @@
     }
 
     &:after {
-        content: "";
+        content: '';
         display: block;
         width: 100%;
         height: 100%;
         position: absolute;
         top: 0;
         left: 0;
-        background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.1) 39%, rgba(7, 11, 22, 0.83) 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 39%, rgba(7, 11, 22, 0.83) 100%); /* Chrome10-25,Safari5.1-6 */
         background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 39%, rgba(7, 11, 22, 0.83) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80ffffff', endColorstr='#d4070b16', GradientType=0); /* IE6-9 */
         z-index: 2;
 
         @media #{$phone} {
@@ -57,7 +54,7 @@
     }
 
     .container {
-        margin-top: calc(253/766 * 56.25vw);
+        margin-top: calc(253 / 766 * 56.25vw);
         z-index: 3;
 
         @media #{$phone} {
@@ -492,7 +489,7 @@
 .hero--model {
     position: relative;
     min-height: 0;
-    height: calc(580/1440 * 100vw);
+    height: calc(580 / 1440 * 100vw);
     max-height: calc(100vh - 85px);
     padding: 0;
     overflow: hidden;
@@ -503,25 +500,22 @@
         max-height: none;
     }
 
+    &:after {
+        background: none;
+    }
+
+    &.hero--overlay {
+
+        &:after {
+            background: linear-gradient(135deg, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, .6) 100%);
+        }
+    }
+
     .container {
         position: static;
         @media #{$phone} {
             padding: 0;
         }
-    }
-
-    &:after {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: -moz-linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.6) 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.6) 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(135deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.6) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#99000000', GradientType=1); /* IE6-9 fallback on horizontal gradient */
     }
 
     .model__title-box {
@@ -692,7 +686,7 @@
     .spinner__toggle-container {
         display: none;
         position: absolute;
-        top: calc((100vh - (580/1440 * 100vh))/2);
+        top: calc((100vh - (580 / 1440 * 100vh)) / 2);
         right: 5%;
         z-index: 10;
     }
@@ -760,22 +754,6 @@
             width: auto !important;
             left: 50% !important;
             transform: translate3d(-50%, 0, 0);
-        }
-    }
-}
-
-.hero--overlay {
-    &:before {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-color: rgba(31, 34, 37, 0.5);
-        @media #{$phone} {
-            display: none;
         }
     }
 }
