owner gallery fixes, instagram plugin

--- a/wp-content/themes/intrepid/css/templates/portal-gallery.scss
+++ b/wp-content/themes/intrepid/css/templates/portal-gallery.scss
@@ -64,3 +64,13 @@
         font-weight: 700;
     }
 }
+
+.portal-gallery__prompt-wrap{
+    text-align: center;
+    width: 100%;
+    margin: 50px auto 0;
+}
+
+.portal-gallery__upload-prompt{
+    font-weight: bold;
+}
