updated motors to suppor timages

--- a/wp-content/themes/intrepid/css/templates/model-category.scss
+++ b/wp-content/themes/intrepid/css/templates/model-category.scss
@@ -17,6 +17,10 @@
 
         .page-template-template-service & {
             height: calc(376/1440 * 100vw);
+
+            @media #{$phone} {
+                min-height: 200px;
+            }
         }
     }
 
