--- a/wp-content/themes/intrepid/css/templates/home.scss
+++ b/wp-content/themes/intrepid/css/templates/home.scss
@@ -288,6 +288,7 @@
             @media #{$phone} {
                 left: 50%;
                 transform: translate3d(-50%, 0, 0);
+                white-space: nowrap;
             }
         }
     }
