ONE AT A TIME - MOBILE - Content not all centered

--- a/wp-content/themes/intrepid/css/templates/about.scss
+++ b/wp-content/themes/intrepid/css/templates/about.scss
@@ -151,9 +151,9 @@
         padding: 43px 30px;
         background-color: #DBDBDB;
     }
-    @media #{$phone}{
-        margin: -20px 10px;
-    }
+    // @media #{$phone}{
+    //     margin: -20px 10px;
+    // }
 
     &.primary-block__sticky-box--dark {
         background-color: $bright-gray;
