--- a/wp-content/themes/intrepid/css/templates/about-main.scss
+++ b/wp-content/themes/intrepid/css/templates/about-main.scss
@@ -58,7 +58,18 @@
     }
 }
 
+.landing-hero__item-bg-video{
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: 2;
+}
+
 .landing-hero__item-bg {
+    overflow: hidden;
     position: absolute;
     left: 0;
     top: 0;
