--- a/wp-content/themes/intrepid/css/partials/_header.scss
+++ b/wp-content/themes/intrepid/css/partials/_header.scss
@@ -121,6 +121,7 @@
             display: block;
             margin: 0 auto;
             text-align: center;
+            padding-bottom: 50px;
         }
 
         a {
@@ -205,6 +206,21 @@
             }
         }
 
+        &.mobile-only {
+            @extend .accessible-text;
+
+            @media #{$header} {
+                clip: unset;
+                height: auto;
+                top: auto;
+                overflow: visible;
+                padding: 0;
+                position: relative;
+                width: 100%;
+                border-bottom: 1px solid #000;
+            }
+        }
+
         &.menu-item-has-children {
 
             .icon-arrow-up {
@@ -256,13 +272,15 @@
 
             .nav__visible & {
                 @media #{$header} {
-                    display: inline-block;
+                    display: block;
                     width: auto;
                     @include fsz(16px);
                     padding: 20px 0;
-                    margin-left: 40px;
-                    margin-right: 40px;
                     position: relative;
+
+                    &:active {
+                        background-color: #3A4249;
+                    }
                 }
             }
         }
@@ -344,8 +362,8 @@
                 .nav__visible & {
                     @media #{$header} {
                         width: 100%;
-                        padding: 15px 20px;
-                        margin-right: 15px;
+                        padding: 0;
+                        margin-right: 0;
                         border-bottom: 0;
                         margin-left: 0;
                     }
@@ -370,15 +388,19 @@
 
                     .nav__visible & {
                         @media #{$header} {
-                            display: inline-block;
+                            display: block;
                             width: auto;
                             @include fsz(16px);
                             text-transform: uppercase;
                             font-weight: 600;
                             color: $white;
-                            padding: 0;
+                            padding: 15px 20px;
                             border-bottom: 0;
                             background-color: transparent;
+
+                            &:active {
+                                background-color: #3A4249;
+                            }
                         }
                     }
                 }
@@ -432,7 +454,7 @@
 .primary-nav .mega-menu {
     .menu-open + .sub-menu {
         @media #{$header} {
-            padding: 90px 0 0;
+            padding: 90px 0 50px;
         }
     }
 }
@@ -553,13 +575,15 @@
 
 .secondary-nav {
     display: none;
+
     @media #{$header} {
         display: block;
+        text-align: center;
         padding: 25px 0;
     }
 
-    .secondary-nav__item {
-        text-align: center;
+    .secondary-nav__item,
+    li {
         margin-bottom: 13px;
     }
 
