--- a/wp-content/themes/intrepid/css/partials/_header.scss
+++ b/wp-content/themes/intrepid/css/partials/_header.scss
@@ -121,7 +121,7 @@
             display: block;
             margin: 0 auto;
             text-align: center;
-            padding-bottom: 50px;
+            padding-bottom: 100px;
         }
 
         a {
@@ -454,7 +454,7 @@
 .primary-nav .mega-menu {
     .menu-open + .sub-menu {
         @media #{$header} {
-            padding: 90px 0 50px;
+            padding: 90px 0 100px;
         }
     }
 }
@@ -501,6 +501,11 @@
                 border-bottom: 1px solid $black;
                 top: 0;
                 left: 0;
+            }
+
+            a {
+                display: block;
+                padding: 25px 0;
             }
         }
 
