--- a/wp-content/themes/intrepid/css/templates/contact-us.scss
+++ b/wp-content/themes/intrepid/css/templates/contact-us.scss
@@ -517,31 +517,34 @@
         @include fsz(12px);
         color: $dark-gray;
         margin-bottom: 0;
-        font-size: 1rem;
+
         @media #{$phone} {
             @include fsz(16px);
             font-weight: 300;
+            font-size: 1rem;
         }
     }
 
     .member__designation {
-        margin: 0;
+        margin-bottom: 18px;
         @include fsz(12px);
 
         @media #{$phone} {
             @include fsz(14px);
+            margin-bottom: 0;
         }
     }
 
     .member__phone {
         @include fsz(12px);
         font-weight: 700;
-        color: #8a0808;
+        color: $dark-gray;
         margin: 0;
 
         @media #{$phone} {
             @include fsz(14px);
             font-weight: 300;
+            color: #8a0808;
         }
     }
 
