yext google reviews

--- a/wp-content/themes/intrepid/css/templates/about.scss
+++ b/wp-content/themes/intrepid/css/templates/about.scss
@@ -472,3 +472,12 @@
         @include fsz(14px);
     }
 }
+
+#yext-widget-255919.yext-reset {
+    background: none;
+
+    .review {
+        padding-bottom: .8em;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+}
