--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -620,9 +620,15 @@
         display: block;
         width: 100%;
         height: auto;
+        opacity: 0;
+        transition: 0.4s ease;
 
         @media #{$phone} {
             display: none;
+        }
+
+        .page-loaded & {
+            opacity: 1;
         }
     }
 
