--- a/wp-content/themes/intrepid/css/templates/about.scss
+++ b/wp-content/themes/intrepid/css/templates/about.scss
@@ -23,6 +23,7 @@
         .primary-block__sticky-box {
             left: 130px;
             right: auto;
+
             @media #{$phone}{
                 position: relative;
                 margin: -20px auto;
@@ -30,6 +31,7 @@
                 bottom: -75px;
                 padding: 43px 30px;
                 background-color: #DBDBDB;
+                color: #1F2225;
             }
         }
     }
@@ -134,6 +136,14 @@
     right: 120px;
     line-height: 2.1;
     width: 100%;
+    transform: translate3d(0, 30px, 0);
+    opacity: 0;
+    transition: 0.5s ease;
+
+    .page-loaded & {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
 
     p {
         margin-bottom: 30px;
@@ -326,6 +336,10 @@
     min-width: 100%;
     min-height: 100%;
     z-index: 1;
+
+    @media #{$phone} {
+        display: none;
+    }
 }
 
 .custom-tab__content-item--inner {
@@ -394,6 +408,7 @@
 
                 @media #{$phone}{
                     padding-right: 0;
+                    margin-right: 0;
                 }
             }
         }
