--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -1100,7 +1100,7 @@
 .deck-block__outer {
 
     @media #{$phone} {
-        min-height: calc(100vw - 20px);
+        min-height: calc(150vw - 20px);
     }
 }
 
@@ -1110,7 +1110,11 @@
     position: relative;
 
     @media #{$phone} {
-        transform: rotate(-90deg) translate3d(-30%, 0, 0);
+        display: block;
+        position: absolute;
+        width: calc(150vw - 20px);
+        transform-origin: center top;
+        transform: rotate(-90deg) translate3d(-50%, calc(-50% - 25vw), 0);
     }
 }
 
@@ -1120,6 +1124,11 @@
     height: auto;
     max-width: 100%;
     margin: 0 auto;
+
+    @media #{$phone} {
+        width: calc(150vw - 20px);
+        max-width: none;
+    }
 }
 
 .deck-point {
@@ -1329,7 +1338,7 @@
 
             a {
                 position: relative;
-                padding-bottom: calc(765/1180 * 100%);
+                padding-bottom: calc(765 / 1180 * 100%);
                 z-index: 2;
 
                 &:before {
@@ -1355,7 +1364,7 @@
             }
 
             a {
-                padding-bottom: calc(246/580 * 100%);
+                padding-bottom: calc(246 / 580 * 100%);
             }
         }
 
@@ -1371,7 +1380,7 @@
             }
 
             a {
-                padding-bottom: calc(256/378 * 100%);
+                padding-bottom: calc(256 / 378 * 100%);
             }
         }
 
@@ -1383,7 +1392,7 @@
             }
 
             a {
-                padding-bottom: calc(256/778 * 100%);
+                padding-bottom: calc(256 / 778 * 100%);
             }
         }
     }
