Service - Team Member Styling

--- a/wp-content/themes/intrepid/css/templates/contact-us.scss
+++ b/wp-content/themes/intrepid/css/templates/contact-us.scss
@@ -519,21 +519,21 @@
         @include fsz(12px);
         color: $dark-gray;
         margin-bottom: 0;
+        font-size: 1rem;
 
-        @media #{$phone} {
-            @include fsz(16px);
-            font-weight: 300;
-            font-size: 1rem;
-        }
+        // @media #{$phone} {
+        //     @include fsz(16px);
+        //     font-weight: 300;
+        // }
     }
 
     .member__designation {
-        margin-bottom: 18px;
+        // margin-bottom: 18px;
+        margin-bottom: 0;
         @include fsz(12px);
 
         @media #{$phone} {
             @include fsz(14px);
-            margin-bottom: 0;
         }
     }
 
@@ -542,11 +542,11 @@
         font-weight: 700;
         color: $dark-gray;
         margin: 0;
+        color: #8a0808;
 
         @media #{$phone} {
             @include fsz(14px);
-            font-weight: 300;
-            color: #8a0808;
+            // font-weight: 300;
         }
     }
 
