--- a/wp-content/themes/intrepid/css/templates/about-main.scss
+++ b/wp-content/themes/intrepid/css/templates/about-main.scss
@@ -66,6 +66,10 @@
     min-width: 100%;
     min-height: 100%;
     z-index: 2;
+
+    @media #{$phone} {
+        display: none;
+    }
 }
 
 .landing-hero__item-bg {
