--- a/wp-content/themes/intrepid/css/templates/build-boat.scss
+++ b/wp-content/themes/intrepid/css/templates/build-boat.scss
@@ -243,10 +243,31 @@
     }
 
     .color-block__picker {
+        position: relative;
         width: 28%;
         @media #{$phone} {
             display: none;
         }
+    }
+
+    .color-block__picker--clear {
+        display: block;
+        position: absolute;
+        left: -20px;
+        top: 0;
+        width: 27px;
+        height: 30px;
+        background: url(images/no-color-large.svg) no-repeat 0 0;
+        background-size: contain;
+        border: none;
+        outline: none;
+        padding: 0;
+        margin: 0;
+        border-radius: 0;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        box-shadow: none;
+        z-index: 100;
     }
 
     .color-block__option {
