--- a/wp-content/themes/intrepid/css/templates/model-category.scss
+++ b/wp-content/themes/intrepid/css/templates/model-category.scss
@@ -131,6 +131,7 @@
         align-items: center;
         padding-top: 8px;
         padding-bottom: 8px;
+        position: relative;
         @media #{$header} {
             justify-content: space-between;
         }
