adjust options slider

--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -767,6 +767,10 @@
         margin-bottom: 30px;
     }
 
+    .slick-track {
+        margin: 0;
+    }
+
     .slick-slide {
         margin: 0 10px;
     }
