refactor options slider on single boat

--- a/wp-content/themes/intrepid/css/templates/model.scss
+++ b/wp-content/themes/intrepid/css/templates/model.scss
@@ -146,10 +146,10 @@
     .model-list__image-link {
         display: block;
         width: 100%;
-        padding-bottom: calc(504/840 * 100%);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
+        //padding-bottom: calc(580/1440 * 100%);
+        //background-size: cover;
+        //background-repeat: no-repeat;
+        //background-position: center;
         height: auto;
         transition: 0.25s;
 
