--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -762,9 +762,12 @@
 .option-slider {
     margin-bottom: 70px;
     margin-left: -10px;
+    padding-top: 70px;
+
     @media #{$phone} {
         margin-left: 0;
         margin-bottom: 30px;
+        padding-top: 0;
     }
 
     .slick-track {
@@ -776,22 +779,23 @@
     }
 
     .slick-dots {
-        position: relative;
-        bottom: -35px;
-        left: 0;
+        position: absolute;
+        top: 0;
+        bottom: auto;
+        left: 50%;
         display: block;
         margin: 0 auto;
         width: 200px;
+        transform: translate3d(-50%, 0, 0);
     }
 
     .slick-arrow {
         position: absolute;
-        bottom: -48px;
+        top: 0;
         margin-top: -9px;
         width: 40px;
         height: 40px;
         font-size: 0;
-        top: auto;
     }
 
     .slick-prev {
