--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -1407,6 +1407,25 @@
 
 }
 
+.gallery-grid__bg-video{
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: 2;
+
+    @media #{$phone} {
+        display: none;
+    }
+}
+
+.gallery-grid__video-wrap{
+    overflow: hidden;
+}
+
+
 .overlay-content {
     position: absolute;
     top: 50%;
