wiring up BAB form

--- a/wp-content/themes/intrepid/css/partials/forms.scss
+++ b/wp-content/themes/intrepid/css/partials/forms.scss
@@ -272,3 +272,8 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
         display: none !important;
     }
 }
+
+.gfield_visibility_hidden,
+.gform_hidden {
+    @extend .accessible-text;
+}
