--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -981,6 +981,7 @@
     }
 }
 
+
 .form-wrap {
     width: 100%;
     max-width: 780px;
@@ -993,7 +994,7 @@
         width: 100%;
     }
 
-    .active & {
+    &--active {
         display: flex;
 
         @media #{$phone} {
@@ -1021,6 +1022,10 @@
         background-color: $dark-gray;
         color: $white;
     }
+}
+
+.form-toggle__email-list{
+    display: none;
 }
 
 .form__field {
