adjust sticky kit

--- a/wp-content/themes/intrepid/css/partials/portal.scss
+++ b/wp-content/themes/intrepid/css/partials/portal.scss
@@ -5,8 +5,8 @@
         min-height: 0;
     }
 
-    .container {
-        margin-top: 40px;
+    .nav-block {
+        margin-bottom: 40px;
     }
 }
 
