--- a/wp-content/themes/intrepid/css/templates/contact-us.scss
+++ b/wp-content/themes/intrepid/css/templates/contact-us.scss
@@ -248,9 +248,6 @@
     }
 }
 
-.phone-list__number {
-    color: white;
-}
 
 .phone-list__item {
     margin-bottom: 12px;
@@ -263,7 +260,12 @@
         position: relative;
         text-align: center;
         color: $white;
+        font-weight: bold;
     }
+}
+
+.phone-list__number{
+    color: white;
 }
 
 .toggle-content__title {
