--- a/wp-content/themes/intrepid/css/templates/build-boat.scss
+++ b/wp-content/themes/intrepid/css/templates/build-boat.scss
@@ -264,7 +264,16 @@
     }
 
     .color-shader__title {
-        margin-top: 24px;
+        margin: 0;
+        position: absolute;
+        bottom: 35px;
+        left: 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    .iro__slider {
+        margin-top: 38px !important;
     }
 
     .color-block__picker--clear {
