add two columns to boat cat template when six or more are showing

--- a/wp-content/themes/intrepid/css/templates/model.scss
+++ b/wp-content/themes/intrepid/css/templates/model.scss
@@ -346,6 +346,12 @@
     }
 }
 
+.column-model__trigger {
+    .active & {
+        top: 0;
+    }
+}
+
 .grid-sizer {
     width: 22%;
     @media screen and (max-width: 1000px) {
